changes and calcualtor added

--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -662,6 +662,8 @@
             <a href="heattransferconvectioncalculator.html" class="calculator-btn">Heat Transfer By Convection (Newton's Law) Calculator</a>
             
             <a href="heatdetectorresponsetimecalculator.html" class="calculator-btn">Heat Detector Response Time Calculator</a>
+            <a href="kvflowcoefficient.html" class="calculator-btn">Kv Flow Coefficient Calculator</a>
+
             <a href="modifiedquantitycalculator.html" class="calculator-btn">Modified CO₂ Quantity Calculator</a>
             
             <a href="reachedconcentrationcalculator.html" class="calculator-btn">Reached Concentration Calculator</a>
