--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -717,6 +717,9 @@
             <a href="potentialenergy.html" class="calculator-btn">Potential Energy Calculator</a>
 
             <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
+            <a href="percentageerrorwhenusingavelocity.html" class="calculator-btn">Percentage Error when using velocity Calculator</a>
+<a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
+
 
             <a href="risklevelassessment.html" class="calculator-btn">Risk Level Assessment</a>
             <a href="riskprioritynumber.html" class="calculator-btn">Risk Priority Number (RPN) Calculator</a>
@@ -751,6 +754,10 @@
             <a href="velocityofsteampassingthroughoriface2.html" class="calculator-btn">Velocity of Steam Passing Through an Orifice Calculator (2)</a>
             <a href="potentialenergyatkineticenergy.html" class="calculator-btn">Velocity Calculator (Energy Conversion)</a>
 <a href="velocityofliquidthroughanorifice.html" class="calculator-btn">Velocity of Liquid through orifice calculator</a>
+<a href="volumetricflowrateofliquidthroughorifice.html" class="calculator-btn">Volumetric Flowrate of a liquid through orifice Calculator</a>
+<a href="valveclosingforce.html" class="calculator-btn">Valve Closing Force Calculator</a>
+<a href="volumetricflowofwaterthroughavalve.html" class="calculator-btn">Volumetric Flow Of Water Through A Valve Calculator</a>
+
             <a href="wireropecal.html" class="calculator-btn">Wire Rope Grips Calculator</a>
             <a href="wellcontrolkillmudwidget.html" class="calculator-btn">Well Control (Kill Mud Weight) Calculator </a>
 
