--- a/calender.html
+++ b/calender.html
@@ -759,7 +759,7 @@ td[data-event]:hover::after {
             monthDiv.className = "month";
             monthDiv.innerHTML = ` <h3 style="color: white; font-size:1.2rem;">
             ${month} - ${qehsThemes[index]}</h3>
-            <img src='images/vindus_clients_images/${month.toUpperCase()}.jpg' alt='${month} Image' style='margin:10px 0'>
+           <img src='images/vindus_clients_images/${month}.jpg' alt='${month} Image' style='margin:10px 0'>
             ` + generateMonthTable(year, index);
             calendarDiv.appendChild(monthDiv);
         });
