--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -170,30 +170,149 @@
 }
 
 
-/* General Reset */
-
-
-/* Styling for the header section */
 .main-header {
-    text-align: center;
-    background-image:url('images/vindus_clients_images/blue4.jpg');  /* Blue */
-    color: #1560bd;
-    padding: 40px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-arou;
+    background: linear-gradient(135deg, #000040, #1560bd);
+    color: #fff;
+    padding: 10px 50px;
     background-size: cover;
+    flex-wrap: nowrap;
 }
 
+/* Clickable Logo */
+.logo-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.logo {
+    width: 110px;
+    height: 110px;
+    object-fit: contain;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+
+
+}
+.logo:hover {
+    transform: scale(1.1);
+}
+
+/* Centered Text Content */
+.header-content {
+    flex: 1;
+    text-align: center;
+    padding: 0 20px;
+    padding-top:20px ;
+  
+   
+}
 .main-header h1 {
-    font-size: 2rem;
-    margin-bottom: 15px;
-    color: #012756;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+    color: white;
+}
+.main-header p {
+    font-size: 1.1rem;
+    opacity: 0.9;
 }
 
-.main-header p {
-    font-size: 1.2rem;
+/* Beautiful Calendar Card */
+.calendar-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 110px;
+    height: 110px;
+    background: #ffffff;
+    color: #1560bd;
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(8px);
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+    padding: 5px;
+}
+.calendar-img {
+    width: 50px;  /* Adjust to fit well */
+    height: auto;
     margin-bottom: 5px;
 }
+.calendar-card h3 {
+    font-size: 0.8rem;
+    color: #1560bd;
+    text-align: center;
+}
+.calendar-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.4);
+    background: rgba(255, 255, 255, 0.982);
+}
 
-/* Styling for the main content */
+/* 🔹 Responsive Design */
+@media (max-width: 768px) {
+    .main-header {
+        padding: 20px;
+    }
+
+    .logo, .calendar-card {
+        width: 110px;
+        height: 110px;
+    }
+
+  
+    .calendar-img {
+        width: 40px;
+        margin-bottom: 5px; /* Keeps text close to image */
+    }
+
+    .main-header h1 {
+        font-size: 1.6rem;
+    }
+
+    .main-header p {
+        font-size: 1rem;
+    }
+
+    .calendar-card h3 {
+        font-size: 0.8rem; /* Make text more readable */
+        margin: 0; /* Remove unnecessary spacing */
+    }
+}
+
+@media (max-width: 480px) {
+    .main-header {
+        padding: 15px;
+    }
+    .logo, .calendar-card {
+        width: 90px;
+        height: 90px;
+    }
+   
+
+    .calendar-img {
+        width: 35px;
+        margin-bottom: 5px;
+    }
+
+    .main-header h1 {
+        font-size: 1.4rem;
+    }
+
+    .main-header p {
+        font-size: 1rem;
+    }
+
+    .calendar-card h3 {
+        font-size: 0.7rem;
+    }
+}
 
 
 .main-content {
@@ -209,28 +328,11 @@
 }
 
 /* Styling for the header section */
-.main-header {
-    text-align: center;
-    background-image:url('images/vindus_clients_images/blue4.jpg');  /* Blue */
-    color: #1560bd;
-    padding: 40px 20px;
-    background-size: cover;
-}
 
-.main-header h1 {
-    font-size: 2rem;
-    margin-bottom: 15px;
-    color: #012756;
-}
-
-.main-header p {
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-}
 
 /* Styling for the main content */
 .main-content {
-    padding: 50px 10%;
+    padding: 30px 10%;
     color: white;
 }
 
@@ -623,10 +725,23 @@
 
 
 <div class="main-header">
-    <h1>World's No.1 QEHS Calculator</h1>
-    <p>Your Trusted Tool For Quality, Environment, Health, Safety & Fire Calculations</p>
-</div>
+    <!-- Clickable Logo -->
+    <a href="index.html" class="logo-link">
+        <img src="images/vindus_clients_images/mlclogo.jpg" alt="Logo" class="logo">
+    </a>
 
+    <!-- Centered Header Content -->
+    <div class="header-content">
+        <h1>World's No.1 QEHS Calculator</h1>
+        <p>Your Trusted Tool For Quality, Environment, Health, Safety & Fire Calculations</p>
+    </div>
+
+    <!-- Beautiful Calendar Card -->
+    <a href="calender.html" class="calendar-card">
+        <img src="images/vindus_clients_images/calender.webp" alt="Calendar Icon" class="calendar-img">
+        <h3>The Calendar Of A Century</h3>
+    </a>
+</div>
 <div class="main-content">
     <!-- Indian Standards Section -->
     <section class="calculator-section">
@@ -693,6 +808,8 @@
             <a href="kicktolerancecalculator.html" class="calculator-btn">Kick Tolerance Calculator</a>
             <a href="thekineticenergyinsteam.html" class="calculator-btn"> Kinetic Energy In Steam Calculator</a>
             <a href="kineticenergy.html" class="calculator-btn">Kinetic Energy Calculator</a>
+            <a href="kvflowcoefficient.html" class="calculator-btn">Kv Flow Coefficient Calculator</a>
+
 
 
            
@@ -716,9 +833,7 @@
             <a href="pressuregradientcalculator.html" class="calculator-btn">Pressure Gradient Calculator</a>
             <a href="potentialenergy.html" class="calculator-btn">Potential Energy Calculator</a>
 
-            <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
-            <a href="percentageerrorwhenusingavelocity.html" class="calculator-btn">Percentage Error when using velocity Calculator</a>
-<a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
+           
 
 
             <a href="risklevelassessment.html" class="calculator-btn">Risk Level Assessment</a>
