--- a/fluidvelocitypitottube.html
+++ b/fluidvelocitypitottube.html
@@ -554,7 +554,7 @@ strong{
 
 
 <div class="calculator-container">
-    <h2>The Liquid Velocity Measured By A Pitot Tube Calculator</h2>
+    <h2>Fluid Velocity Calculator (Pitot Tube)</h2>
     <div class="form-group">
         <label for="pressureDrop"><strong>Enter Pressure Difference (ΔP) in Pascals:</strong></label>
         <input type="number" id="pressureDrop" placeholder="Enter ΔP in Pa">
