--- a/orificeplatebetaratio.html
+++ b/orificeplatebetaratio.html
@@ -554,7 +554,7 @@ strong{
 
 
 <div class="calculator-container">
-    <h2>The Liquid Velocity Measured By A Pitot Tube Calculator</h2>
+    <h2>Orifice Plate Beta Ratio Calculator</h2>
 
     <div class="form-group">
         <label for="orificeDiameter"><strong> Orifice Diameter (d):</strong> </label>
