new claculators added

--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -768,6 +768,8 @@
             <a href="heatstressindex.html" class="calculator-btn">Heat Stress Index (HSI) Calculator</a>
             <a href="noiseexposturelevel.html" class="calculator-btn">Noise Exposure Level (Leq) Calculator</a>
             <a href="thresholdlimitvalue.html" class="calculator-btn">Threshold Limit Value (TLV) Calculator</a>
+            <a href="totalrecordableoccupationalillness.html" class="calculator-btn">Total Recordable Occupational Illness Frequency (TRCF-ILL) Calculator</a>
+
             
             <a href="workplaceexposurelimit.html" class="calculator-btn">Workplace Exposure Limit (WEL) Calculator</a>
             
