--- a/motorvechilecrashrate.html
+++ b/motorvechilecrashrate.html
@@ -593,8 +593,7 @@ select {
 
     <h3>Calculation Scale:</h3>
     <p>
-        MVCR is typically calculated per <strong>100,000</strong> miles/kilometers, but in some cases,  
-        industries may use a <strong>200,000</strong> scale for reporting purposes. This standardization allows for 
+        MVCR is typically calculated per <strong>100,000</strong> miles/kilometers. This standardization allows for 
         better comparison across fleets and industries.
     </p>
 
