--- a/criticalpressureratiofordrysteamandgases.html
+++ b/criticalpressureratiofordrysteamandgases.html
@@ -552,7 +552,7 @@ strong{
 <br><br><br><br>
 
 <div class="calculator-container">
-    <h2>Critical Pressure Ratio Calculator</h2>
+    <h2>Critical Pressure Ratio For Dry Steam And Gases Calculator</h2>
 
     <div class="form-group">
         <label for="gamma">Isentropic Exponent (γ):</label>
