--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -777,6 +777,10 @@
             <a href="energybalancebetweensteamandfluid.html" class="calculator-btn">Energy Balance Between Steam And Fluid Of A Flow-Type Application Calculator</a>
             <a href="equalpercentagevalvelift.html" class="calculator-btn">Equal Percentage Valve Lift Calculator Based on Relative Flow</a>
             <a href="flowcoefficientlift.html" class="calculator-btn">Equal Percentage Valve Lift Calculator Based on Relative K<sub>v</sub></a>
+            <a href="environmentaldamagefrequency.html" class="calculator-btn">Environmental Damage Frequency (ENDF) Calculator</a>
+            <a href="environmentalincidentrate.html" class="calculator-btn">Environmental Incident Rate (EIR) Calculator</a>
+
+
             <a href="flashsteamcalculator.html" class="calculator-btn">Flash Steam Calculator</a>
             <a href="heattransferthermoflow.html" class="calculator-btn">Heat Transfer Thermo Flow Calculator</a>
             <a href="heattransfersteam.html" class="calculator-btn">Heat Transfer Rate Calculator (Condensing Steam)</a>
