--- a/requiredopeningforce.html
+++ b/requiredopeningforce.html
@@ -251,10 +251,16 @@
     margin-bottom: 15px;
 }
 
-.note-container h3 {
+/* .note-container h3 {
     margin-top: 0;
     color: #007bff;
     font-size: 18px;
+} */
+
+.note-container h3 {
+    margin:15px 0;
+    color: #007bff;
+    font-size:20px;
 }
 
 .note-container p {
@@ -270,61 +276,6 @@ strong{
         padding: 10px; 
     }
 }
-select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #d3e0f0;
-    border-radius: 5px;
-    font-size: 1rem;
-    background-color: rgb(235, 243, 246);
-
-}
-/* Table Styles */
-table {
-    width: 50%;
-    border-collapse: collapse;
-    margin: 20px auto; /* Centers table */
-}
-
-/* Table Cells */
-th, td {
-    padding: 12px;
-    text-align: center;
-    border: 1px solid #ddd;
-    font-size: 16px;
-}
-
-/* Header Styles */
-th {
-    background-color: #1560bd;
-    color: white;
-    font-weight: bold;
-}
-
-/* Row Styles */
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
-}
-
-/* Responsive Table */
-@media (max-width: 600px) {
-    table {
-        width: 90%; /* Adjusts width for mobile */
-        margin: 20px auto; /* Ensures it stays centered */
-    }
-    
-    th, td {
-        font-size: 14px;
-        padding: 8px;
-    }
-}
-
-
 </style>
 	</head>
 
@@ -600,240 +551,121 @@ tr:hover {
 
 <br><br><br><br>
 
-
-
 <div class="calculator-container">
-    <h2>BMI Calculator</h2>
-    
+    <h2> Safety Valve Opening Force with the spring housing Calculator</h2>
+
     <div class="form-group">
-        <label for="age">Age (years):</label>
-        <input type="number" id="age" placeholder="Enter Age">
+        <label for="pressure">Fluid Inlet Pressure (P<sub>V</sub>) (Pa):</label>
+        <input type="number" id="pressure" placeholder="Enter PV (Pa)">
     </div>
+
     <div class="form-group">
-        <label for="gender">Gender:</label>
-        <select id="gender">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-        </select>
+        <label for="nozzleArea">Nozzle Area (A<sub>N</sub>) (m²):</label>
+        <input type="number" id="nozzleArea" placeholder="Enter AN (m²)">
     </div>
+
     <div class="form-group">
-        <label for="weight">Weight (kg):</label>
-        <input type="number" id="weight" placeholder="Enter Weight">
+        <label for="backPressure">Backpressure (P<sub>B</sub>) (Pa):</label>
+        <input type="number" id="backPressure" placeholder="Enter PB (Pa)">
     </div>
-    <div class="form-group">
-        <label for="height">Height (cm):</label>
-        <input type="number" id="height" placeholder="Enter Height">
-    </div>
-    <button class="cal-btn" onclick="calculateBMI()">Calculate BMI</button>
+
+    <button class="cal-btn" onclick="calculateOpeningForce()">Calculate Opening Force</button>
+
     <div class="result" id="result"></div>
+    <div class="feedback" id="feedback"></div>
 </div>
+
 <div class="note-container">
-    <h3>BMI Categories for Adults</h3>
-    <table>
-        <tr>
-            <th>Classification</th>
-            <th>BMI Range (kg/m²)</th>
-        </tr>
-        <tr><td>Severe Thinness</td><td>&lt; 16</td></tr>
-        <tr><td>Moderate Thinness</td><td>16 - 17</td></tr>
-        <tr><td>Mild Thinness</td><td>17 - 18.5</td></tr>
-        <tr><td>Normal</td><td>18.5 - 25</td></tr>
-        <tr><td>Overweight</td><td>25 - 30</td></tr>
-        <tr><td>Obese Class I</td><td>30 - 35</td></tr>
-        <tr><td>Obese Class II</td><td>35 - 40</td></tr>
-        <tr><td>Obese Class III</td><td>&gt; 40</td></tr>
-    </table>
+    <h3>Note:</h3> 
+    <p>This tool calculates the <strong>Required Opening Force for a Safety Valve with spring housing  wented via discharge vent pipe</strong> based on key operational parameters. Proper force determination ensures efficient valve operation, prevents system overpressure, and enhances safety.</p>
 
-    <p><strong>What is Obesity?</strong><br>
-        Obesity is a medical condition where a person has an excessive amount of body fat. It is classified into different categories based on BMI (Body Mass Index). The three classes of obesity are:
-        <ul>
-            <li><strong>Obese Class I</strong> (BMI 30-34.9) - Mild obesity, where lifestyle changes and weight management may help.</li>
-            <li><strong>Obese Class II</strong> (BMI 35-39.9) - Moderate obesity, which may require medical intervention.</li>
-            <li><strong>Obese Class III</strong> (BMI ≥40) - Severe obesity, often referred to as morbid obesity, which poses significant health risks and may require surgical intervention.</li>
-        </ul>
-        Obesity increases the risk of numerous health problems, such as heart disease, diabetes, and high blood pressure. Early identification and intervention are crucial to managing these risks.
-    </p>
-
-    <h3>BMI Categories for Children and Teens (Age 2-20)</h3>
-    <table>
-        <tr>
-            <th>Category</th>
-            <th>Percentile Range</th>
-        </tr>
-        <tr><td>Underweight</td><td>&lt; 5%</td></tr>
-        <tr><td>Healthy weight</td><td>5% - 85%</td></tr>
-        <tr><td>At risk of overweight</td><td>85% - 95%</td></tr>
-        <tr><td>Overweight</td><td>&gt; 95%</td></tr>
-    </table>
-
-    <p><strong>Why is the BMI Calculator Used?</strong><br>
-        The BMI calculator is a simple and widely used tool to assess whether a person is underweight, normal weight, overweight, or obese based on their height and weight. It helps identify potential health risks and determine if further evaluation by a healthcare professional is necessary.
-        However, BMI does not distinguish between muscle mass and fat, so it is not a perfect measure of health. It’s important to consider other factors like body composition, lifestyle, and family history when assessing one's health.</p>
-
-    <p><strong>What is BMI?</strong><br>
-        Body Mass Index (BMI) is a measure of body fat based on a person's weight in relation to their height. Although it’s a quick and easy tool for classifying body weight, it doesn’t directly measure body fat percentage or distribution. It serves as a general indicator of whether a person is at a healthy weight for their height, and it helps healthcare providers evaluate risks associated with obesity, malnutrition, and other health issues.</p>
-
-    <p>
-        BMI is a useful tool for assessing body weight status but does not account for body composition. It is important to consult a healthcare professional for more personalized advice.
-    </p>
-    <h3>Risks Associated with Being Overweight</h3>
+    <p><strong>Understanding Parameters:</strong></p>
     <ul>
-        <li>High blood pressure</li>
-        <li>Higher levels of LDL cholesterol and lower levels of HDL cholesterol</li>
-        <li>Type II diabetes</li>
-        <li>Coronary heart disease</li>
-        <li>Stroke</li>
-        <li>Gallbladder disease</li>
-        <li>Osteoarthritis</li>
-        <li>Sleep apnea and breathing problems</li>
-        <li>Certain cancers (endometrial, breast, colon, kidney, gallbladder, liver)</li>
-        <li>Low quality of life</li>
-        <li>Mental illnesses such as clinical depression, anxiety, and others</li>
-        <li>Body pains and difficulty with certain physical functions</li>
-        <li>Increased risk of mortality</li>
+        <li><strong>Fluid Inlet Pressure (P<sub>V</sub>) (Pa):</strong> The pressure exerted by the fluid at the inlet of the safety valve.</li>
+        <li><strong>Nozzle Area (A<sub>N</sub>) (m²):</strong> The effective cross-sectional area of the valve nozzle through which fluid flows.</li>
+        <li><strong>Spring Force (F<sub>S</sub>) (N):</strong> The force exerted by the valve spring, which opposes the opening of the valve.</li>
+        <li><strong>Backpressure (P<sub>B</sub>) (Pa):</strong> The pressure present at the outlet of the valve, which affects the opening force.</li>
     </ul>
 
-    <h3>Risks Associated with Being Underweight</h3>
+    <p><strong>Key Applications:</strong></p>
     <ul>
-        <li>Malnutrition, vitamin deficiencies, anemia</li>
-        <li>Osteoporosis</li>
-        <li>Decreased immune function</li>
-        <li>Growth and development issues</li>
-        <li>Possible reproductive issues for women</li>
-        <li>Potential complications from surgery</li>
-        <li>Increased risk of mortality</li>
-        <li>Possible underlying conditions such as anorexia nervosa</li>
+        <li><strong>Safety Valve Sizing:</strong> Ensures the valve opens under the correct conditions to relieve excess pressure.</li>
+        <li><strong>Boiler & Pressure Vessel Protection:</strong> Prevents dangerous overpressure scenarios in industrial systems.</li>
+        <li><strong>Industrial Steam & Gas Systems:</strong> Helps determine the required force to activate safety valves in pressurized environments.</li>
+        <li><strong>Process Safety & Compliance:</strong> Ensures adherence to industry standards for pressure relief systems.</li>
     </ul>
-    <h3>BMI Prime</h3>
-    <p>BMI prime is the ratio of a person's measured BMI to the upper limit of BMI that is considered "normal," by institutions such as the WHO and the CDC. Though it may differ in some countries, such as those in Asia, this upper limit, which will be referred to as BMI<sub>upper</sub>, is 25 kg/m².</p>
 
-   
+    <p><strong>Validations & Input Constraints:</strong></p>
+    <ul>
+        <li><strong>Fluid Inlet Pressure (P<sub>V</sub>) must be positive:</strong> Pressure cannot be zero or negative.</li>
+        <li><strong>Nozzle Area (A<sub>N</sub>) must be positive:</strong> A valid nozzle area is required for accurate calculations.</li>
+        <li><strong>Spring Force (F<sub>S</sub>) must be positive:</strong> The force exerted by the valve spring must be realistic.</li>
+        <li><strong>Backpressure (P<sub>B</sub>) can be zero or positive:</strong> Negative backpressure is not valid in standard applications.</li>
+        <li><strong>Check for extreme force values:</strong>  
+            - Very low forces may indicate an undersized spring or incorrect input.  
+            - Extremely high forces may suggest incorrect system conditions or valve selection.</li>
+    </ul>
 
-    <p>Since BMI prime is a ratio of two BMI values, BMI prime is a dimensionless value. A person who has a BMI prime less than 0.74 is classified as underweight; from 0.74 to 1 is classified as normal; greater than 1 is classified as overweight; and greater than 1.2 is classified as obese. The table below shows a person's weight classification based on their BMI prime:</p>
-
-    <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>Classification</th>
-                <th>BMI</th>
-                <th>BMI Prime</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Severe Thinness</td>
-                <td>&lt; 16</td>
-                <td>&lt; 0.64</td>
-            </tr>
-            <tr>
-                <td>Moderate Thinness</td>
-                <td>16 - 17</td>
-                <td>0.64 - 0.68</td>
-            </tr>
-            <tr>
-                <td>Mild Thinness</td>
-                <td>17 - 18.5</td>
-                <td>0.68 - 0.74</td>
-            </tr>
-            <tr>
-                <td>Normal</td>
-                <td>18.5 - 25</td>
-                <td>0.74 - 1</td>
-            </tr>
-            <tr>
-                <td>Overweight</td>
-                <td>25 - 30</td>
-                <td>1 - 1.2</td>
-            </tr>
-            <tr>
-                <td>Obese Class I</td>
-                <td>30 - 35</td>
-                <td>1.2 - 1.4</td>
-            </tr>
-            <tr>
-                <td>Obese Class II</td>
-                <td>35 - 40</td>
-                <td>1.4 - 1.6</td>
-            </tr>
-            <tr>
-                <td>Obese Class III</td>
-                <td>&gt; 40</td>
-                <td>&gt; 1.6</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <p>BMI prime allows us to make a quick assessment of how much a person's BMI differs from the upper limit of BMI that is considered normal. It also allows for comparisons between groups of people who have different upper BMI limits.</p>
+    <p><strong>Conclusion:</strong></p>
+    <p>This tool assists engineers and technicians in determining the required opening force for a safety valve, ensuring proper functionality and compliance with industrial safety standards.</p>
 </div>
 
 <script>
-  function calculateBMI() {
-    const age = parseInt(document.getElementById('age').value);
-    const gender = document.getElementById('gender').value;
-    const weight = parseFloat(document.getElementById('weight').value);
-    const height = parseFloat(document.getElementById('height').value) / 100; // Convert cm to meters
+    function calculateOpeningForce() {
+        const P_V = parseFloat(document.getElementById("pressure").value);
+        const A_N = parseFloat(document.getElementById("nozzleArea").value);
+        const P_B = parseFloat(document.getElementById("backPressure").value);
+        const resultElement = document.getElementById("result");
+        const feedbackElement = document.getElementById("feedback");
 
-    const resultElement = document.getElementById('result');
+        // Reset previous results
+        resultElement.innerText = "";
+        feedbackElement.innerText = "";
 
-    // Validate Inputs
-    if (isNaN(age) || age < 0) {
-        resultElement.innerText = "Please enter a valid age.";
-        resultElement.style.color = "red";
-        return;
+        // 🔹 **Validations**
+        if (isNaN(P_V) || P_V < 0) {
+            resultElement.innerHTML = "❌ <strong style='color: red;'>Error:</strong> Fluid Inlet Pressure (P<sub>V</sub>) must be a non-negative number.";
+            return;
+        }
+        if (isNaN(A_N) || A_N <= 0) {
+            resultElement.innerHTML = "❌ <strong style='color: red;'>Error:</strong> Nozzle Area (A<sub>N</sub>) must be a positive number.";
+            return;
+        }
+        if (isNaN(P_B) || P_B < 0) {
+            resultElement.innerHTML = "❌ <strong style='color: red;'>Error:</strong> Backpressure (P<sub>B</sub>) must be a non-negative number.";
+            return;
+        }
+
+        // 🔹 **Calculate Opening Force (F_S)**
+        const F_S = (P_V - P_B) * A_N;
+
+        // 🔹 **Define Feedback Message & Color**
+        let feedbackMessage = "";
+        let feedbackColor = "black";
+
+        if (F_S < 50) {
+            feedbackMessage = "⚠️ <strong>Low Opening Force:</strong> Ensure this force is sufficient to operate the valve correctly.";
+            feedbackColor = "blue";
+        } else if (F_S >= 50 && F_S <= 5000) {
+            feedbackMessage = "✅ <strong>Standard Opening Force:</strong> This is within the typical range for safety valves.";
+            feedbackColor = "green";
+        } else {
+            feedbackMessage = "❌ <strong>High Opening Force:</strong> Verify system design to ensure proper functionality.";
+            feedbackColor = "red";
+        }
+
+        // 🔹 **Display Results**
+        resultElement.innerHTML = `
+            <strong>Required Opening Force (F<sub>S</sub>):</strong> ${F_S.toFixed(4)} <strong>N</strong><br>
+            <strong style="color: ${feedbackColor};">${feedbackMessage}</strong>
+        `;
+        resultElement.style.color = "black";
     }
-    if (isNaN(weight) || weight <= 0) {
-        resultElement.innerText = "Please enter a valid weight.";
-        resultElement.style.color = "red";
-        return;
-    }
-    if (isNaN(height) || height <= 0) {
-        resultElement.innerText = "Please enter a valid height.";
-        resultElement.style.color = "red";
-        return;
-    }
-
-    // Calculate BMI
-    const bmi = weight / (height * height);
-    const bmiPrime = bmi / 25;
-
-    let category = '';
-
-    if (bmi < 16) {
-        category = 'Severe Thinness';
-    } else if (bmi < 17) {
-        category = 'Moderate Thinness';
-    } else if (bmi < 18.5) {
-        category = 'Mild Thinness';
-    } else if (bmi < 25) {
-        category = 'Normal';
-    } else if (bmi < 30) {
-        category = 'Overweight';
-    } else if (bmi < 35) {
-        category = 'Obese Class I';
-    } else if (bmi < 40) {
-        category = 'Obese Class II';
-    } else {
-        category = 'Obese Class III';
-    }
-
-    // Display Result
-    resultElement.innerHTML = `
-        <p><strong>Your BMI:</strong> ${bmi.toFixed(2)}kg/m²</p>
-        <p><strong>Category:</strong> ${category}</p>
-        <p><strong>BMI Prime:</strong> ${bmiPrime.toFixed(2)}</p>
-    `;
-    resultElement.style.color = "black"; // Reset color in case of previous error
-}
-
 </script>
 
 
 
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
-
 
 
 
@@ -1103,3 +935,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <!-- Mirrored from dsathemes.com/html/martex_1.1/files/project-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 08 Mar 2024 16:40:05 GMT -->
 </html>
+
