--- a/steamflowarea.html
+++ b/steamflowarea.html
@@ -216,6 +216,10 @@
     .cal-btn:hover {
       background-color: #0056b3;
     }
+    .error {
+        color: red;
+        font-size: 0.9em;
+    }
     .result {
       margin-top: 20px;
       font-size: 24px;
@@ -252,13 +256,15 @@
 }
 
 .note-container h3 {
-    margin-top: 0;
+    margin-top: 10px;
     color: #007bff;
     font-size: 18px;
 }
-
+.note-container ul{
+    margin-top: 10px;
+}
 .note-container p {
-    margin-top: 15px;
+    margin-top: 10px;
     text-align: justify;
 }
 strong{
@@ -270,61 +276,6 @@ strong{
         padding: 10px; 
     }
 }
-select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #d3e0f0;
-    border-radius: 5px;
-    font-size: 1rem;
-    background-color: rgb(235, 243, 246);
-
-}
-/* Table Styles */
-table {
-    width: 50%;
-    border-collapse: collapse;
-    margin: 20px auto; /* Centers table */
-}
-
-/* Table Cells */
-th, td {
-    padding: 12px;
-    text-align: center;
-    border: 1px solid #ddd;
-    font-size: 16px;
-}
-
-/* Header Styles */
-th {
-    background-color: #1560bd;
-    color: white;
-    font-weight: bold;
-}
-
-/* Row Styles */
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
-}
-
-/* Responsive Table */
-@media (max-width: 600px) {
-    table {
-        width: 90%; /* Adjusts width for mobile */
-        margin: 20px auto; /* Ensures it stays centered */
-    }
-    
-    th, td {
-        font-size: 14px;
-        padding: 8px;
-    }
-}
-
-
 </style>
 	</head>
 
@@ -602,231 +553,119 @@ tr:hover {
 
 
 
+
+
 <div class="calculator-container">
-    <h2>BMI Calculator</h2>
-    
+    <h2>AD-Merkblatt valves - Minimum flow area for steam
+    </h2>
     <div class="form-group">
-        <label for="age">Age (years):</label>
-        <input type="number" id="age" placeholder="Enter Age">
+        <label for="chi"><strong>Pressure Medium Coefficient (χ):</strong></label>
+    <input type="number" id="chi" step="0.01" min="0.01" placeholder="Enter χ value ">
     </div>
+
     <div class="form-group">
-        <label for="gender">Gender:</label>
-        <select id="gender">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-        </select>
+        <label for="m_dot"><strong>Mass Flow Rate (ṁ in kg/h):</strong></label>
+        <input type="number" id="m_dot" step="0.1" min="0.1" placeholder="Enter ṁ ">
     </div>
+
     <div class="form-group">
-        <label for="weight">Weight (kg):</label>
-        <input type="number" id="weight" placeholder="Enter Weight">
+        <label for="alpha_w"><strong>Outflow Coefficient (αw):</strong></label>
+        <input type="number" id="alpha_w" step="0.01" min="0.01" placeholder="Enter αw ">
     </div>
+
     <div class="form-group">
-        <label for="height">Height (cm):</label>
-        <input type="number" id="height" placeholder="Enter Height">
+        <label for="p_r"><strong>Absolute Relieving Pressure (PR in bar a):</strong></label>
+        <input type="number" id="p_r" step="0.1" min="0.1" placeholder="Enter PR ">
     </div>
-    <button class="cal-btn" onclick="calculateBMI()">Calculate BMI</button>
+
+    <button class="cal-btn" onclick="calculateFlowArea()">Calculate Minimum Flow Area</button>
     <div class="result" id="result"></div>
+    <p class="feedback" id="feedback"></p>
 </div>
+
+
 <div class="note-container">
-    <h3>BMI Categories for Adults</h3>
-    <table>
-        <tr>
-            <th>Classification</th>
-            <th>BMI Range (kg/m²)</th>
-        </tr>
-        <tr><td>Severe Thinness</td><td>&lt; 16</td></tr>
-        <tr><td>Moderate Thinness</td><td>16 - 17</td></tr>
-        <tr><td>Mild Thinness</td><td>17 - 18.5</td></tr>
-        <tr><td>Normal</td><td>18.5 - 25</td></tr>
-        <tr><td>Overweight</td><td>25 - 30</td></tr>
-        <tr><td>Obese Class I</td><td>30 - 35</td></tr>
-        <tr><td>Obese Class II</td><td>35 - 40</td></tr>
-        <tr><td>Obese Class III</td><td>&gt; 40</td></tr>
-    </table>
+    <h3>Note:</h3>
 
-    <p><strong>What is Obesity?</strong><br>
-        Obesity is a medical condition where a person has an excessive amount of body fat. It is classified into different categories based on BMI (Body Mass Index). The three classes of obesity are:
-        <ul>
-            <li><strong>Obese Class I</strong> (BMI 30-34.9) - Mild obesity, where lifestyle changes and weight management may help.</li>
-            <li><strong>Obese Class II</strong> (BMI 35-39.9) - Moderate obesity, which may require medical intervention.</li>
-            <li><strong>Obese Class III</strong> (BMI ≥40) - Severe obesity, often referred to as morbid obesity, which poses significant health risks and may require surgical intervention.</li>
-        </ul>
-        Obesity increases the risk of numerous health problems, such as heart disease, diabetes, and high blood pressure. Early identification and intervention are crucial to managing these risks.
-    </p>
+        <p>This formula calculates the <strong>minimum cross-sectional flow area (A₀)</strong> needed for steam discharge in AD-Merkblatt valves. It ensures that the steam is released efficiently without causing excessive pressure buildup. Used in safety engineering to prevent system failures due to overpressure conditions.</p>
 
-    <h3>BMI Categories for Children and Teens (Age 2-20)</h3>
-    <table>
-        <tr>
-            <th>Category</th>
-            <th>Percentile Range</th>
-        </tr>
-        <tr><td>Underweight</td><td>&lt; 5%</td></tr>
-        <tr><td>Healthy weight</td><td>5% - 85%</td></tr>
-        <tr><td>At risk of overweight</td><td>85% - 95%</td></tr>
-        <tr><td>Overweight</td><td>&gt; 95%</td></tr>
-    </table>
 
-    <p><strong>Why is the BMI Calculator Used?</strong><br>
-        The BMI calculator is a simple and widely used tool to assess whether a person is underweight, normal weight, overweight, or obese based on their height and weight. It helps identify potential health risks and determine if further evaluation by a healthcare professional is necessary.
-        However, BMI does not distinguish between muscle mass and fat, so it is not a perfect measure of health. It’s important to consider other factors like body composition, lifestyle, and family history when assessing one's health.</p>
-
-    <p><strong>What is BMI?</strong><br>
-        Body Mass Index (BMI) is a measure of body fat based on a person's weight in relation to their height. Although it’s a quick and easy tool for classifying body weight, it doesn’t directly measure body fat percentage or distribution. It serves as a general indicator of whether a person is at a healthy weight for their height, and it helps healthcare providers evaluate risks associated with obesity, malnutrition, and other health issues.</p>
-
-    <p>
-        BMI is a useful tool for assessing body weight status but does not account for body composition. It is important to consult a healthcare professional for more personalized advice.
-    </p>
-    <h3>Risks Associated with Being Overweight</h3>
+    <h3> Parameter Breakdown:</h3>
     <ul>
-        <li>High blood pressure</li>
-        <li>Higher levels of LDL cholesterol and lower levels of HDL cholesterol</li>
-        <li>Type II diabetes</li>
-        <li>Coronary heart disease</li>
-        <li>Stroke</li>
-        <li>Gallbladder disease</li>
-        <li>Osteoarthritis</li>
-        <li>Sleep apnea and breathing problems</li>
-        <li>Certain cancers (endometrial, breast, colon, kidney, gallbladder, liver)</li>
-        <li>Low quality of life</li>
-        <li>Mental illnesses such as clinical depression, anxiety, and others</li>
-        <li>Body pains and difficulty with certain physical functions</li>
-        <li>Increased risk of mortality</li>
+        <li><strong>A₀ (Minimum Flow Area in mm²):</strong> The required valve opening size for safe steam discharge.</li>
+        <li><strong>χ (Pressure Medium Coefficient):</strong> A dimensionless factor that depends on steam properties.</li>
+        <li><strong>ṁ (Mass Flow Rate in kg/h):</strong> The amount of steam flowing per hour.</li>
+        <li><strong>αw (Outflow Coefficient):</strong> Efficiency factor indicating how well steam exits through the valve.</li>
+        <li><strong>PR (Absolute Relieving Pressure in bar a):</strong> The total system pressure at which the valve releases steam.</li>
     </ul>
 
-    <h3>Risks Associated with Being Underweight</h3>
+    <h3> Real-Life Applications:</h3>
     <ul>
-        <li>Malnutrition, vitamin deficiencies, anemia</li>
-        <li>Osteoporosis</li>
-        <li>Decreased immune function</li>
-        <li>Growth and development issues</li>
-        <li>Possible reproductive issues for women</li>
-        <li>Potential complications from surgery</li>
-        <li>Increased risk of mortality</li>
-        <li>Possible underlying conditions such as anorexia nervosa</li>
+        <li><strong>Industrial Safety Valves:</strong> Ensures proper steam release in boilers to prevent overpressure.</li>
+        <li><strong>Fire Protection Systems:</strong> Used in fire suppression systems to safely control steam discharge.</li>
+        <li><strong>Environmental Compliance:</strong> Helps industries meet legal discharge regulations for steam emissions.</li>
+        <li><strong>Health & Safety Regulations:</strong> Protects workers and equipment from hazardous overpressure situations.</li>
     </ul>
-    <h3>BMI Prime</h3>
-    <p>BMI prime is the ratio of a person's measured BMI to the upper limit of BMI that is considered "normal," by institutions such as the WHO and the CDC. Though it may differ in some countries, such as those in Asia, this upper limit, which will be referred to as BMI<sub>upper</sub>, is 25 kg/m².</p>
 
-   
-
-    <p>Since BMI prime is a ratio of two BMI values, BMI prime is a dimensionless value. A person who has a BMI prime less than 0.74 is classified as underweight; from 0.74 to 1 is classified as normal; greater than 1 is classified as overweight; and greater than 1.2 is classified as obese. The table below shows a person's weight classification based on their BMI prime:</p>
-
-    <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>Classification</th>
-                <th>BMI</th>
-                <th>BMI Prime</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Severe Thinness</td>
-                <td>&lt; 16</td>
-                <td>&lt; 0.64</td>
-            </tr>
-            <tr>
-                <td>Moderate Thinness</td>
-                <td>16 - 17</td>
-                <td>0.64 - 0.68</td>
-            </tr>
-            <tr>
-                <td>Mild Thinness</td>
-                <td>17 - 18.5</td>
-                <td>0.68 - 0.74</td>
-            </tr>
-            <tr>
-                <td>Normal</td>
-                <td>18.5 - 25</td>
-                <td>0.74 - 1</td>
-            </tr>
-            <tr>
-                <td>Overweight</td>
-                <td>25 - 30</td>
-                <td>1 - 1.2</td>
-            </tr>
-            <tr>
-                <td>Obese Class I</td>
-                <td>30 - 35</td>
-                <td>1.2 - 1.4</td>
-            </tr>
-            <tr>
-                <td>Obese Class II</td>
-                <td>35 - 40</td>
-                <td>1.4 - 1.6</td>
-            </tr>
-            <tr>
-                <td>Obese Class III</td>
-                <td>&gt; 40</td>
-                <td>&gt; 1.6</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <p>BMI prime allows us to make a quick assessment of how much a person's BMI differs from the upper limit of BMI that is considered normal. It also allows for comparisons between groups of people who have different upper BMI limits.</p>
+    <h3> Conclusion:</h3>
+        <p>This formula plays a crucial role in determining the <strong>safe and efficient release of steam</strong>. It helps in selecting the right valve size to <strong>prevent system failures and ensure regulatory compliance</strong>. By ensuring the correct flow area, it <strong>safeguards equipment, workers, and the environment</strong>.</p>
+  
 </div>
+
 
 <script>
-  function calculateBMI() {
-    const age = parseInt(document.getElementById('age').value);
-    const gender = document.getElementById('gender').value;
-    const weight = parseFloat(document.getElementById('weight').value);
-    const height = parseFloat(document.getElementById('height').value) / 100; // Convert cm to meters
+    function calculateFlowArea() {
+        let chi = parseFloat(document.getElementById("chi").value);
+        let m_dot = parseFloat(document.getElementById("m_dot").value);
+        let alpha_w = parseFloat(document.getElementById("alpha_w").value);
+        let p_r = parseFloat(document.getElementById("p_r").value);
 
-    const resultElement = document.getElementById('result');
+        let resultElement = document.getElementById("result");
+        let feedbackElement = document.getElementById("feedback");
 
-    // Validate Inputs
-    if (isNaN(age) || age < 0) {
-        resultElement.innerText = "Please enter a valid age.";
-        resultElement.style.color = "red";
-        return;
-    }
-    if (isNaN(weight) || weight <= 0) {
-        resultElement.innerText = "Please enter a valid weight.";
-        resultElement.style.color = "red";
-        return;
-    }
-    if (isNaN(height) || height <= 0) {
-        resultElement.innerText = "Please enter a valid height.";
-        resultElement.style.color = "red";
-        return;
-    }
+        // Clear previous messages
+        resultElement.innerHTML = "";
+        feedbackElement.innerHTML = "";
 
-    // Calculate BMI
-    const bmi = weight / (height * height);
-    const bmiPrime = bmi / 25;
+        // Input validation
+        if (isNaN(chi) || chi <= 0) {
+            showFeedback("⚠️ Pressure Medium Coefficient (χ) must be greater than 0.", "red");
+            return;
+        }
+        if (isNaN(m_dot) || m_dot <= 0) {
+            showFeedback("⚠️ Mass Flow Rate (ṁ) must be greater than 0.", "red");
+            return;
+        }
+        if (isNaN(alpha_w) || alpha_w <= 0) {
+            showFeedback("⚠️ Outflow Coefficient (αw) must be greater than 0.", "red");
+            return;
+        }
+        if (isNaN(p_r) || p_r <= 0) {
+            showFeedback("⚠️ Absolute Relieving Pressure (PR) must be greater than 0.", "red");
+            return;
+        }
 
-    let category = '';
+        // Calculate flow area A0
+        let A0 = (chi * m_dot) / (alpha_w * p_r);
+        resultElement.innerHTML = `📌 <strong>Minimum Flow Area (A₀):</strong> ${A0.toFixed(4)} mm²`;
 
-    if (bmi < 16) {
-        category = 'Severe Thinness';
-    } else if (bmi < 17) {
-        category = 'Moderate Thinness';
-    } else if (bmi < 18.5) {
-        category = 'Mild Thinness';
-    } else if (bmi < 25) {
-        category = 'Normal';
-    } else if (bmi < 30) {
-        category = 'Overweight';
-    } else if (bmi < 35) {
-        category = 'Obese Class I';
-    } else if (bmi < 40) {
-        category = 'Obese Class II';
-    } else {
-        category = 'Obese Class III';
+        // Feedback for result
+        if (A0 < 10) {
+            showFeedback("✅ The required valve size is small, standard safety valve may be sufficient.", "green");
+        } else if (A0 >= 10 && A0 <= 50) {
+            showFeedback("ℹ️ Medium-sized valve required. Verify the flow conditions.", "blue");
+        } else {
+            showFeedback("⚠️ Large safety valve needed. Check system constraints!", "orange");
+        }
     }
 
-    // Display Result
-    resultElement.innerHTML = `
-        <p><strong>Your BMI:</strong> ${bmi.toFixed(2)}kg/m²</p>
-        <p><strong>Category:</strong> ${category}</p>
-        <p><strong>BMI Prime:</strong> ${bmiPrime.toFixed(2)}</p>
-    `;
-    resultElement.style.color = "black"; // Reset color in case of previous error
-}
-
+    // Function to show feedback
+    function showFeedback(message, color) {
+        let feedbackElement = document.getElementById("feedback");
+        feedbackElement.innerHTML = message;
+        feedbackElement.style.color = color;
+    }
 </script>
-
 
 
 
