--- a/thermalpentrationtimeforconduvtiveheattransfor.html
+++ b/thermalpentrationtimeforconduvtiveheattransfor.html
@@ -252,7 +252,7 @@
 }
 
 .note-container h3 {
-    margin-top: 0;
+    margin:15px 0;
     color: #007bff;
     font-size: 18px;
 }
@@ -277,54 +277,9 @@ select {
     border: 1px solid #d3e0f0;
     border-radius: 5px;
     font-size: 1rem;
-    background-color: rgb(235, 243, 246);
+    background-color: rgb(223, 241, 247);
 
 }
-/* Table Styles */
-table {
-    width: 50%;
-    border-collapse: collapse;
-    margin: 20px auto; /* Centers table */
-}
-
-/* Table Cells */
-th, td {
-    padding: 12px;
-    text-align: center;
-    border: 1px solid #ddd;
-    font-size: 16px;
-}
-
-/* Header Styles */
-th {
-    background-color: #1560bd;
-    color: white;
-    font-weight: bold;
-}
-
-/* Row Styles */
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
-}
-
-/* Responsive Table */
-@media (max-width: 600px) {
-    table {
-        width: 90%; /* Adjusts width for mobile */
-        margin: 20px auto; /* Ensures it stays centered */
-    }
-    
-    th, td {
-        font-size: 14px;
-        padding: 8px;
-    }
-}
-
-
 </style>
 	</head>
 
@@ -603,232 +558,72 @@ tr:hover {
 
 
 <div class="calculator-container">
-    <h2>BMI Calculator</h2>
-    
+    <h2>Thermal Penetration Time for Conductive Heat Transfer Calculator</h2>
+
     <div class="form-group">
-        <label for="age">Age (years):</label>
-        <input type="number" id="age" placeholder="Enter Age">
+        <label for="length">Distance/Thickness (in meters):</label>
+        <input type="number" id="length" placeholder="Enter the distance in meters" min="0">
     </div>
+
     <div class="form-group">
-        <label for="gender">Gender:</label>
-        <select id="gender">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-        </select>
+        <label for="thermalDiffusivity">Thermal Diffusivity (in m²/s):</label>
+        <input type="number" id="thermalDiffusivity" placeholder="Enter thermal diffusivity" min="0">
     </div>
-    <div class="form-group">
-        <label for="weight">Weight (kg):</label>
-        <input type="number" id="weight" placeholder="Enter Weight">
-    </div>
-    <div class="form-group">
-        <label for="height">Height (cm):</label>
-        <input type="number" id="height" placeholder="Enter Height">
-    </div>
-    <button class="cal-btn" onclick="calculateBMI()">Calculate BMI</button>
+
+    <button class="cal-btn" onclick="calculatePenetrationTime()">Calculate Thermal Penetration Time</button>
     <div class="result" id="result"></div>
 </div>
+
 <div class="note-container">
-    <h3>BMI Categories for Adults</h3>
-    <table>
-        <tr>
-            <th>Classification</th>
-            <th>BMI Range (kg/m²)</th>
-        </tr>
-        <tr><td>Severe Thinness</td><td>&lt; 16</td></tr>
-        <tr><td>Moderate Thinness</td><td>16 - 17</td></tr>
-        <tr><td>Mild Thinness</td><td>17 - 18.5</td></tr>
-        <tr><td>Normal</td><td>18.5 - 25</td></tr>
-        <tr><td>Overweight</td><td>25 - 30</td></tr>
-        <tr><td>Obese Class I</td><td>30 - 35</td></tr>
-        <tr><td>Obese Class II</td><td>35 - 40</td></tr>
-        <tr><td>Obese Class III</td><td>&gt; 40</td></tr>
-    </table>
-
-    <p><strong>What is Obesity?</strong><br>
-        Obesity is a medical condition where a person has an excessive amount of body fat. It is classified into different categories based on BMI (Body Mass Index). The three classes of obesity are:
-        <ul>
-            <li><strong>Obese Class I</strong> (BMI 30-34.9) - Mild obesity, where lifestyle changes and weight management may help.</li>
-            <li><strong>Obese Class II</strong> (BMI 35-39.9) - Moderate obesity, which may require medical intervention.</li>
-            <li><strong>Obese Class III</strong> (BMI ≥40) - Severe obesity, often referred to as morbid obesity, which poses significant health risks and may require surgical intervention.</li>
-        </ul>
-        Obesity increases the risk of numerous health problems, such as heart disease, diabetes, and high blood pressure. Early identification and intervention are crucial to managing these risks.
-    </p>
-
-    <h3>BMI Categories for Children and Teens (Age 2-20)</h3>
-    <table>
-        <tr>
-            <th>Category</th>
-            <th>Percentile Range</th>
-        </tr>
-        <tr><td>Underweight</td><td>&lt; 5%</td></tr>
-        <tr><td>Healthy weight</td><td>5% - 85%</td></tr>
-        <tr><td>At risk of overweight</td><td>85% - 95%</td></tr>
-        <tr><td>Overweight</td><td>&gt; 95%</td></tr>
-    </table>
-
-    <p><strong>Why is the BMI Calculator Used?</strong><br>
-        The BMI calculator is a simple and widely used tool to assess whether a person is underweight, normal weight, overweight, or obese based on their height and weight. It helps identify potential health risks and determine if further evaluation by a healthcare professional is necessary.
-        However, BMI does not distinguish between muscle mass and fat, so it is not a perfect measure of health. It’s important to consider other factors like body composition, lifestyle, and family history when assessing one's health.</p>
-
-    <p><strong>What is BMI?</strong><br>
-        Body Mass Index (BMI) is a measure of body fat based on a person's weight in relation to their height. Although it’s a quick and easy tool for classifying body weight, it doesn’t directly measure body fat percentage or distribution. It serves as a general indicator of whether a person is at a healthy weight for their height, and it helps healthcare providers evaluate risks associated with obesity, malnutrition, and other health issues.</p>
-
+    <h3>How It Works:</h3>
     <p>
-        BMI is a useful tool for assessing body weight status but does not account for body composition. It is important to consult a healthcare professional for more personalized advice.
+        This calculator estimates the time it takes for heat to penetrate through a material and reach the opposite side. The calculation is based on the principles of heat conduction, which describe how heat spreads through materials over time.
     </p>
-    <h3>Risks Associated with Being Overweight</h3>
     <ul>
-        <li>High blood pressure</li>
-        <li>Higher levels of LDL cholesterol and lower levels of HDL cholesterol</li>
-        <li>Type II diabetes</li>
-        <li>Coronary heart disease</li>
-        <li>Stroke</li>
-        <li>Gallbladder disease</li>
-        <li>Osteoarthritis</li>
-        <li>Sleep apnea and breathing problems</li>
-        <li>Certain cancers (endometrial, breast, colon, kidney, gallbladder, liver)</li>
-        <li>Low quality of life</li>
-        <li>Mental illnesses such as clinical depression, anxiety, and others</li>
-        <li>Body pains and difficulty with certain physical functions</li>
-        <li>Increased risk of mortality</li>
+        <li>
+            <strong>Distance/Thickness (x):</strong>
+            This is the physical distance (in meters) that heat must travel through the material. The thicker the material, the longer it takes for heat to penetrate. If the distance is zero, it implies there is no material for heat to travel through, and the penetration time would also be zero.
+        </li>
+        <li>
+            <strong>Thermal Diffusivity (α):</strong>
+            This is a material property that indicates how quickly heat spreads through the material. It depends on the material's ability to conduct heat, its density, and its specific heat capacity. A higher thermal diffusivity means heat spreads faster, reducing the penetration time. If thermal diffusivity is zero, it implies the material does not conduct heat at all, and the penetration time would be infinite.
+        </li>
     </ul>
-
-    <h3>Risks Associated with Being Underweight</h3>
-    <ul>
-        <li>Malnutrition, vitamin deficiencies, anemia</li>
-        <li>Osteoporosis</li>
-        <li>Decreased immune function</li>
-        <li>Growth and development issues</li>
-        <li>Possible reproductive issues for women</li>
-        <li>Potential complications from surgery</li>
-        <li>Increased risk of mortality</li>
-        <li>Possible underlying conditions such as anorexia nervosa</li>
-    </ul>
-    <h3>BMI Prime</h3>
-    <p>BMI prime is the ratio of a person's measured BMI to the upper limit of BMI that is considered "normal," by institutions such as the WHO and the CDC. Though it may differ in some countries, such as those in Asia, this upper limit, which will be referred to as BMI<sub>upper</sub>, is 25 kg/m².</p>
-
-   
-
-    <p>Since BMI prime is a ratio of two BMI values, BMI prime is a dimensionless value. A person who has a BMI prime less than 0.74 is classified as underweight; from 0.74 to 1 is classified as normal; greater than 1 is classified as overweight; and greater than 1.2 is classified as obese. The table below shows a person's weight classification based on their BMI prime:</p>
-
-    <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>Classification</th>
-                <th>BMI</th>
-                <th>BMI Prime</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Severe Thinness</td>
-                <td>&lt; 16</td>
-                <td>&lt; 0.64</td>
-            </tr>
-            <tr>
-                <td>Moderate Thinness</td>
-                <td>16 - 17</td>
-                <td>0.64 - 0.68</td>
-            </tr>
-            <tr>
-                <td>Mild Thinness</td>
-                <td>17 - 18.5</td>
-                <td>0.68 - 0.74</td>
-            </tr>
-            <tr>
-                <td>Normal</td>
-                <td>18.5 - 25</td>
-                <td>0.74 - 1</td>
-            </tr>
-            <tr>
-                <td>Overweight</td>
-                <td>25 - 30</td>
-                <td>1 - 1.2</td>
-            </tr>
-            <tr>
-                <td>Obese Class I</td>
-                <td>30 - 35</td>
-                <td>1.2 - 1.4</td>
-            </tr>
-            <tr>
-                <td>Obese Class II</td>
-                <td>35 - 40</td>
-                <td>1.4 - 1.6</td>
-            </tr>
-            <tr>
-                <td>Obese Class III</td>
-                <td>&gt; 40</td>
-                <td>&gt; 1.6</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <p>BMI prime allows us to make a quick assessment of how much a person's BMI differs from the upper limit of BMI that is considered normal. It also allows for comparisons between groups of people who have different upper BMI limits.</p>
+    <p>
+        The calculator uses the relationship between the distance heat must travel and the material's thermal diffusivity to estimate the time required for heat to penetrate the material. The calculation accounts for the fact that heat spreads in a diffusive manner, meaning it takes longer to penetrate thicker materials and materials with lower thermal diffusivity.
+    </p>
+    <p>
+        <strong>Example:</strong>
+        For a material with a thickness of 0.05 meters and a thermal diffusivity of <strong>0.0000012 m²/s</strong>, the calculator estimates that it would take approximately 174 seconds for the heat to penetrate through the material and be felt on the other side.
+    </p>
 </div>
 
 <script>
-  function calculateBMI() {
-    const age = parseInt(document.getElementById('age').value);
-    const gender = document.getElementById('gender').value;
-    const weight = parseFloat(document.getElementById('weight').value);
-    const height = parseFloat(document.getElementById('height').value) / 100; // Convert cm to meters
-
+function calculatePenetrationTime() {
+    const length = parseFloat(document.getElementById('length').value);
+    const alpha = parseFloat(document.getElementById('thermalDiffusivity').value);
     const resultElement = document.getElementById('result');
 
-    // Validate Inputs
-    if (isNaN(age) || age < 0) {
-        resultElement.innerText = "Please enter a valid age.";
-        resultElement.style.color = "red";
-        return;
-    }
-    if (isNaN(weight) || weight <= 0) {
-        resultElement.innerText = "Please enter a valid weight.";
-        resultElement.style.color = "red";
-        return;
-    }
-    if (isNaN(height) || height <= 0) {
-        resultElement.innerText = "Please enter a valid height.";
-        resultElement.style.color = "red";
+    // Validate inputs
+    if (isNaN(length) || isNaN(alpha) || length < 0 || alpha <= 0) {
+        resultElement.innerText = "Please enter valid positive numbers for both the distance and thermal diffusivity.";
         return;
     }
 
-    // Calculate BMI
-    const bmi = weight / (height * height);
-    const bmiPrime = bmi / 25;
+  // Calculate thermal penetration time
+const time = (length * length) / (12 * alpha);
+resultElement.innerHTML = `      <strong>Thermal Penetration Time: ${time.toFixed(8)} seconds</strong><br>
 
-    let category = '';
+  <div >
+    <img src="images/vindus_clients_images/cartoontop.webp" alt="Thermal Penetration Icon" style="width:50px; height:auto; margin-right:10px;">
+    <p>
+      Oh yes…after ${time.toFixed(0)} sec I can feel the thermal effect (hotness) on the other side of wall!
+    </p>
+  </div>
+`;
 
-    if (bmi < 16) {
-        category = 'Severe Thinness';
-    } else if (bmi < 17) {
-        category = 'Moderate Thinness';
-    } else if (bmi < 18.5) {
-        category = 'Mild Thinness';
-    } else if (bmi < 25) {
-        category = 'Normal';
-    } else if (bmi < 30) {
-        category = 'Overweight';
-    } else if (bmi < 35) {
-        category = 'Obese Class I';
-    } else if (bmi < 40) {
-        category = 'Obese Class II';
-    } else {
-        category = 'Obese Class III';
-    }
-
-    // Display Result
-    resultElement.innerHTML = `
-        <p><strong>Your BMI:</strong> ${bmi.toFixed(2)}kg/m²</p>
-        <p><strong>Category:</strong> ${category}</p>
-        <p><strong>BMI Prime:</strong> ${bmiPrime.toFixed(2)}</p>
-    `;
-    resultElement.style.color = "black"; // Reset color in case of previous error
 }
-
 </script>
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
