new calculators added

--- a/developmentservice.html
+++ b/developmentservice.html
@@ -723,20 +723,20 @@
 
         <section class="qhe-solutions">
             <div class="qhe-content">
-              <h1 class="section-title">Tailored Software Solutions for Quality, Health, and Environment Agencies</h1>
+              <h1 class="section-title">Tailored Software Solutions for Quality,Environment, Health ,Safety and Fire Agencies</h1>
           
               <div class="qhe-block about-us">
                 <h2 class="block-heading">About Us</h2>
                 <p class="block-text">
                   We provide software solutions to empower organizations with innovative tools that streamline operations and enhance efficiency. 
-                  We specialize in delivering customized software solutions to meet the unique needs of Quality, Health, and Environment (QHE) agencies.
+                  We specialize in delivering customized software solutions to meet the unique needs of Quality,Environment,Health,safety (QHES) And Fire agencies.
                 </p>
               </div>
           
               <div class="qhe-block service-overview">
                 <h2 class="block-heading">Service Overview</h2>
                 <p class="block-text">
-                  We understand the specific challenges faced by QHE agencies, including regulatory compliance, data management, monitoring, and reporting. 
+                  We understand the specific challenges faced by QHES and Fire agencies, including regulatory compliance, data management, monitoring, and reporting. 
                   Our tailored software solutions are designed to address these challenges effectively, ensuring operational excellence and regulatory adherence.
                 </p>
               </div>
