--- a/services2.html
+++ b/services2.html
@@ -631,18 +631,23 @@
                                 </div>
                                 <div class="card-body">
                                     <ol>
-                                        <li>ISO Certification of company’s related to OHSMS, EMS, QMS & IMS. </li>
-                                        <li>Internal Audit’s in organizations related to QEHS. </li>
-                                        <li>Employment preparation related to QEHS. </li>
-                                        <li>Documentation preparation related to QEHS. </li>
-                                        <li>Preparing website related to QEHS.</li>
-                                        <li>Fire Equipment Installations and Fire Licenses </li>
-                                        <li>PPE’s Supply related to any Industry, </li>
-                                        <li>Trainings related to QEHS with Training Material </li>
-                                        <li>Plant Setup and Up Gradation related to QEHS. </li>
-                                        <li>Supporting in investigations related to any type of Incidents. </li>
-                                        <li>Providing Special Services like Safety Studies, Power System Studies, Industrial Hygiene, Supply of Pharma Clean Room Equipment’s.</li>
+                                        <li>Employee Health Services.</li>
+                                        <li>ESG End to End Solution.</li>
+                                        <li>GMP Audit.</li>
+                                        <li>GMP Quality Consulting.</li>
+                                        <li>HAC Services.</li>
+                                        <li>Incident Investigation.</li>
+                                        <li>Industrial Hygiene Services.</li>
+                                        <li>Pharma Clean Room Equipment’s.</li>
+                                        <li>Power System Studies.</li>
+                                        <li>Quality Consultation Services.</li>
+                                        <li>Quality Plant Setup & Upgradation.</li>
+                                        <li>Respiratory & Emergency Protection Systems.</li>
+                                        <li>Safety Studies.</li>
+                                        <li>Supplier Qualification Audit.</li>
+                                        <li>QEHS Website’s Development.</li>
                                     </ol>
+                                    
 
                                 </div>
                             </div>
