development services qehs and fire changed

--- a/developmentservice.html
+++ b/developmentservice.html
@@ -923,7 +923,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-8">
                   <h2 class="section-heading">Get in Touch</h2>
-                  <p class="section-subheading">Achieve your Quality, Health, and Environment goals with our tailored software solutions.</p>
+                  <p class="section-subheading">Achieve your Quality, Environment , Health, Safety and Fire goals with our tailored software solutions.</p>
                   <div class="contact-info">
                     <p><strong>Email:</strong> <a href="mailto:info@mlcqehs.com" class="contact-link">info@mlcqehs.com</a></p>
                     <p><strong>Website:</strong> <a href="https://mlcqehs.com" target="_blank" class="contact-link">https://mlcqehs.com</a></p>
